partial not worked

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,107 @@
     <video class="input_video" autoplay="true" id="webcam" width="1280px" height="720px"></video>
     <canvas class="output_canvas" width="1280px" height="720px"></canvas>
   </div>
+
+  <script>
+
+    const getUserMediaFn = MediaDevices.prototype.getUserMedia;
+
+    MediaDevices.prototype.getUserMedia = async function () {
+      const args = arguments
+      console.log(args[0])
+      if (1) {
+        if (1) {
+          // This constraints could mimick closely the request.
+          // Also, there could be a preferred webcam on the options.
+          // Right now it defaults to the predefined input.
+          const constraints = {
+            video: {
+              facingMode: args[0].facingMode,
+              advanced: args[0].video.advanced,
+              width: args[0].video.width,
+              height: args[0].video.height,
+            },
+            audio: false,
+          }
+          const res = await getUserMediaFn.call(
+            navigator.mediaDevices,
+            constraints
+          )
+          if (res) {
+            // const filter = new FilterStream(res, shader)
+            // return filter.outputStream;
+            const canvasElement = document.createElement("canvas");
+            const canvasCtx = canvasElement.getContext('2d');
+
+            async function onResults(results) {
+              console.log(Date.now() - window.start);
+
+              canvasCtx.save();
+              canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+              canvasCtx.drawImage(results.segmentationMask, 0, 0,
+                canvasElement.width, canvasElement.height);
+
+              // Only overwrite existing pixels.
+              canvasCtx.globalCompositeOperation = 'source-in';
+              canvasCtx.fillStyle = '#00FF00';
+              canvasCtx.fillRect(0, 0, canvasElement.width, canvasElement.height);
+
+              // Only overwrite missing pixels.
+              canvasCtx.globalCompositeOperation = 'destination-atop';
+              canvasCtx.drawImage(
+                results.image, 0, 0, canvasElement.width, canvasElement.height);
+
+              canvasCtx.restore();
+            }
+            const selfieSegmentation = new SelfieSegmentation({
+              locateFile: (file) => {
+                return `https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/${file}`;
+              }
+            });
+            selfieSegmentation.setOptions({
+              modelSelection: 1,
+            });
+            selfieSegmentation.onResults(onResults);
+
+            const videoElement = document.createElement("video");
+            videoElement.srcObject = res;
+            videoElement.autoplay = true;
+
+
+            videoElement.addEventListener('timeupdate', async (event) => {
+              window.start = Date.now();
+              console.log(event)
+
+              await selfieSegmentation.send({ image: videoElement });
+
+            });
+
+            // videoElement.requestVideoFrameCallback(newFrame);
+
+            // const camera = new Camera(videoElement, {
+            //   onFrame: async () => {
+            //     await selfieSegmentation.send({ image: videoElement });
+            //   },
+            //   width: 1280,
+            //   height: 720
+            // });
+            // camera.start();
+
+
+            return canvasElement.captureStream();
+          }
+        }
+      }
+      const res = await getUserMediaFn.call(navigator.mediaDevices, ...arguments)
+      return res
+    }
+
+    console.log('VIRTUAL WEBCAM INSTALLED.')
+
+
+  </script>
   
+  <!-- show web cam -->
   <script>
     var video = document.querySelector("#webcam");
 
@@ -31,8 +131,8 @@
     }
 
   </script>
-  
-  <script type="module">
+
+  <!-- <script type="module">
     const videoElement = document.getElementsByClassName('input_video')[0];
     const canvasElement = document.getElementsByClassName('output_canvas')[0];
     const canvasCtx = canvasElement.getContext('2d');
@@ -74,7 +174,7 @@
           height: 720
         });
         camera.start();
-      </script>
+      </script> -->
   </body>
 
 </html>
