--- a/public/index2.html
+++ b/public/index2.html
@@ -40,7 +40,7 @@
           advanced: args[0].video.advanced,
           width: args[0].video.width,
           height: args[0].video.height,
-          frameRate: { max: 15 },
+          frameRate: 15,
         },
         audio: false,
       }
