--- a/public/index3.html
+++ b/public/index3.html
@@ -12,19 +12,18 @@
 
 <body>
   <div class="container">
-    <canvas class="output_canvas"></canvas>
-<video autoplay="true" id="webcam"></video>
+    <video autoplay="true" id="webcam"></video>
 
   </div>
 </body>
 
 </html>
 <script type="module">
-    const canvasElement = document.getElementsByClassName('output_canvas')[0];
+      const canvasElement = document.createElement('canvas');
     let stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
 
-                      const videoElement = document.createElement("video");
-                      videoElement.srcObject = stream;
+      const videoElement = document.createElement("video");
+      videoElement.srcObject = stream;
 
     let stream_settings = stream.getVideoTracks()[0].getSettings();
     canvasElement.width = stream_settings.width;
@@ -67,12 +66,12 @@
   });
   selfieSegmentation.onResults(onResults);
 
-                    const camera = new Camera(videoElement, {
-                      onFrame: async () => {
-                        await selfieSegmentation.send({ image: videoElement });
-                      }
-                    });
-                    camera.start();
+      const camera = new Camera(videoElement, {
+        onFrame: async () => {
+          await selfieSegmentation.send({ image: videoElement });
+        }
+      });
+      camera.start();
 
   MediaDevices.prototype.getUserMedia = async function () {
     window.bluredWebcamStream = canvasElement.captureStream();
