reverted to previous because in mobile have performance issue with dynamic canvas

--- a/public/index3.html
+++ b/public/index3.html
@@ -12,18 +12,19 @@
 
 <body>
   <div class="container">
-    <video autoplay="true" id="webcam"></video>
+    <canvas class="output_canvas"></canvas>
+<video autoplay="true" id="webcam"></video>
 
   </div>
 </body>
 
 </html>
 <script type="module">
-      const canvasElement = document.createElement('canvas');
+      const canvasElement = document.getElementsByClassName('output_canvas')[0];
     let stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
 
-      const videoElement = document.createElement("video");
-      videoElement.srcObject = stream;
+                        const videoElement = document.createElement("video");
+                        videoElement.srcObject = stream;
 
     let stream_settings = stream.getVideoTracks()[0].getSettings();
     canvasElement.width = stream_settings.width;
@@ -66,12 +67,12 @@
   });
   selfieSegmentation.onResults(onResults);
 
-      const camera = new Camera(videoElement, {
-        onFrame: async () => {
-          await selfieSegmentation.send({ image: videoElement });
-        }
-      });
-      camera.start();
+                      const camera = new Camera(videoElement, {
+                        onFrame: async () => {
+                          await selfieSegmentation.send({ image: videoElement });
+                        }
+                      });
+                      camera.start();
 
   MediaDevices.prototype.getUserMedia = async function () {
     window.bluredWebcamStream = canvasElement.captureStream();
